# frontend/src/app/shared/swaggers/books/swagger-api-books.yaml
@@ -4,16 +4,14 @@ info:
   description: APP - BOOKS
   version: "1.0"
 servers:
-  - url: /book-service
-
+  - url: http://localhost:8080/book-service
 security:
   - bearerAuth: []
-
 paths:
   /api/books:
     get:
       tags:
-        - book
+        - book-controller
       operationId: search
       parameters:
         - name: bookSearchDTO
@@ -35,7 +33,7 @@ paths:
                 $ref: "#/components/schemas/ApiDataResponsePageBook"
     put:
       tags:
-        - book
+        - book-controller
       operationId: create
       requestBody:
         content:
@@ -52,7 +50,7 @@ paths:
   /api/books/{id}:
     delete:
       tags:
-        - book
+        - book-controller
       operationId: delete
       parameters:
         - name: id
@@ -66,7 +64,7 @@ paths:
           description: OK
     patch:
       tags:
-        - book
+        - book-controller
       operationId: update
       parameters:
         - name: id
@@ -88,10 +86,37 @@ paths:
             "*/*":
               schema:
                 $ref: "#/components/schemas/ApiDataResponseBook"
+  /api/attachement/stream/{id}:
+    get:
+      tags:
+        - attachement-controller
+      operationId: stream
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: Range
+          in: header
+          required: false
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            "*/*":
+              schema:
+                type: array
+                items:
+                  type: string
+                  format: byte
   /api/attachement/download/{id}:
     get:
       tags:
-        - attachement
+        - attachement-controller
       operationId: download
       parameters:
         - name: id
@@ -683,24 +708,24 @@ components:
           format: int64
         sort:
           $ref: "#/components/schemas/SortObject"
-        pageNumber:
-          type: integer
-          format: int32
-        pageSize:
-          type: integer
-          format: int32
         paged:
           type: boolean
         unpaged:
           type: boolean
+        pageSize:
+          type: integer
+          format: int32
+        pageNumber:
+          type: integer
+          format: int32
     SortObject:
       type: object
       properties:
         empty:
           type: boolean
-        sorted:
-          type: boolean
         unsorted:
+          type: boolean
+        sorted:
           type: boolean
     StreamingResponseBody:
       type: object
